# laserana

./: CMakeLists.txt  Readme.txt  WireIndexMap.root
ApplyField/: ApplyField.fcl  ApplyField_module.cc  CMakeLists.txt
HitAna/: CMakeLists.txt  HitAna.fcl  HitAna_module.cc
LaserCalibration/: ADDITIONAL_NOTES.txt  CMakeLists.txt  Laser.h  LaserBeam.cxx  LaserBeam.h  LaserCalibration.fcl  LaserCalibration.fcl_old  LaserCalibration_module.cc  LaserCalibration_module.cc_old  LaserTrack.cxx  README.txt  setkdev.sh
LaserDataMerger/: CMakeLists.txt  GetDistortion.fcl  GetDistortion_module.cc  GetRaw_module.cc  GetTracks_module.cc  LaserDataMerger.fcl  LaserDataMerger_module.cc  MapProducer.cc.cc  TimeMapProducer.fcl  TimeMapProducer_module.cc  Trunc_module.cc  Truncate.fcl  WireInfo.fcl  WireInfo_module.cc  get_all.fcl  get_raw.fcl  get_tracks.fcl  get_tracks_pnra.fcl  get_true.fcl  get_true_nosce.fcl  gettracks.fcl  merger.fcl  rename.sh  truncator.fcl
LaserObjects/: CMakeLists.txt  Laser.h  LaserBeam.cxx  LaserBeam.h  LaserHits.cxx  LaserHits.h  LaserParameters.h  LaserROI.cxx  LaserROI.h  LaserTrack.h  LaserUtils.cxx  LaserUtils.h  classes.h  classes_def.xml  classes_def.xml~
LaserReco/: CMakeLists.txt  HitFilter.fcl  HitFilter_module.cc  LaserReco.fcl  LaserReco_module.cc  LaserSpotter.fcl  LaserSpotter_module.cc  LaserWireMap.fcl  LaserWireMap_module.cc  laserreco.fcl  laserspotter.fcl  setkdev.sh
LaserSim/: CMakeLists.txt  LaserSim_module.cc  laser_sim.fcl
PowerAna/: CMakeLists.txt  PowerAna.fcl  PowerAna_module.cc
SECAna/: CMakeLists.txt  SECAna.fcl  SECAna_module.cc
fcl/: laser_hitana.fcl  laser_hitana_50kV.fcl  laser_hitana_noroi.fcl  laser_hitana_nospot.fcl  laser_hitana_nothing.fcl  laser_reco.fcl  laser_reco_50kV.fcl  laser_reco_filter.fcl  laser_reco_gaushit_digitfilter_exp.fcl  laser_reco_kahlman_50kV.fcl  laser_reco_kalman.fcl  laser_reco_kalman_50kV.fcl  laser_reco_kalman_roi.fcl  laser_reco_kalman_roi_50kV.fcl  laser_reco_kalmanhit.fcl  laser_reco_laserhit.fcl  laser_reco_laserhit_50kV.fcl  laser_reco_laserhit_NO_digitfilter.fcl  laser_reco_laserhit_NO_digitfilter_50kV.fcl  laser_reco_laserhit_digitfilter.fcl  laser_reco_laserhit_digitfilter_50kV.fcl  laser_reco_laserhit_digitfilter_exp.fcl  laser_reco_laserhit_digitfilter_exp_50kV.fcl  laser_reco_laserhit_digitfilter_exp_roi.fcl  laser_reco_laserhit_digitfilter_exp_roi_50kV.fcl  laser_reco_laserhit_digitfilter_exp_roi_65kV.fcl  laser_reco_laserhit_digitfilter_nomerger.fcl  laser_reco_laserhit_digitfilter_thr_roi.fcl  laser_reco_laserhit_digitfilter_thr_roi_50kV.fcl  laser_reco_traj.fcl  laser_sim_reco_gaushit_digitfilter.fcl  laser_sim_reco_kalman.fcl  laser_sim_reco_laserhit_digitfilter_calda.fcl  laser_sim_reco_laserhit_digitfilter_exp.fcl  merge_tracks.fcl  merge_tracks_50kV.fcl
nbproject/: configurations.xml  project.xml
nbproject/private/: configurations.xml  private.xml
python/: LaserData.py  Merger.py  MergerIO.py  PowerAna.py  PrintInfo.py  RANSAC_hits.py  ReadLaser.py  cluster_hits.py  collect_hits.py  count_hits.py  hadd.py  plotHits.py  plot_hits.py  plot_tracks.py
python/TrackProducer/: LaserTrackProducer.py  SingleTrackProducer.py
python/TrackProducer/test/: test_Track.py
python/data/: Run-3165.txt  Run-3166.txt  Run-3300.txt  TimeInfo-3165.root  TimeInfo-3300.root  TimeMap-3165.root  TimeMap-3300.root  testdata.root
python/datadefs/: base.py  lar_data.py  laserdef.py  metadata.py  recobhits.py  recobtrack.py  test_lar_data.py
python/test/: test_LaserData.py  test_data_0.txt  test_data_1.txt
python/utils/: calculate_residuals.py  calibrate_mirror.py  calibrate_position.py  demonstrate_delata.py  lar_utils.py  npy_merger.py  plot_distortion.py  plot_endpoints.py  plot_map.py  plot_raw_laser.py  plot_selected_tracks.py  plot_topview.py  plot_tracks.ipynb  plot_tracks.py  plt_hit_histo.py  plt_laser.py  plt_tracks.py  reppilf.py  select_tracks.py  test_write.py  write_root.py
test/: CMakeLists.txt  Hits.txt  LaserBeamTest.fcl  LaserBeamTest_module.cc  LaserHitFinderTest.fcl  LaserHitFinderTest_module.cc  LaserHitGenerator.fcl  LaserHitGenerator_module.cc  LaserMergerTest_module.cc  LaserMerger_TestLogic.fcl  LaserMerger_TestMapping.fcl  LaserMerger_TestMerging.fcl  LaserMerger_TestMerging_LCS1.fcl  LaserMerger_TestMerging_LCS2.fcl  LaserObjectsTest.fcl  LaserObjectsTest_module.cc  LaserRawDigitGenTest_module.cc  LaserRawDigitGenerator.fcl  LaserRawDigitGeneratorTest1.fcl  LaserRawDigitGeneratorTest2.fcl  LaserRawDigitGeneratorTest3.fcl  LaserRawDigitGeneratorTest4.fcl  LaserRawDigitGenerator_module.cc  LaserRecoTest_module.cc  LaserReco_TestHighThreshold.fcl  LaserReco_TestHorizontalSpread.fcl  LaserReco_TestROI.fcl  LaserReco_TestSingleTrack.fcl  LaserReco_TestVerticalSpread.fcl  LaserSpotterGenHitsManual.fcl  LaserSpotterGenHitsTest.fcl  LaserSpotterGenHitsTest1.fcl  LaserSpotterGenHitsTest_Levels.fcl  LaserSpotterGenHitsTest_Threshold.fcl  LaserSpotterGenTest_module.cc  LaserSpotterTest.fcl  LaserSpotterTest_module.cc  LaserUtilsTest.fcl  LaserUtilsTest_module.cc  RawDigits.txt  (+4 more)
test/merger/: HitDefs-10001.txt  Run-10000.txt  Run-10001.txt  Run-10002.txt  TimeMap-10000.root  TimeMap-10002.root
test/reco/: HitDefs-10000.txt  HitDefs-10001.txt  HitDefs-10002.txt  HitDefs-10003.txt  HitDefs-10004.txt  Run-10000.txt  Run-10001.txt  Run-10002.txt  Run-10003.txt  TimeMap-10000.root  TimeMap-10001.root  TimeMap-10002.root  TimeMap-10003.root  WireIndexMap.root
test/spotter/: RawDigits_HitLevel.txt  RawDigits_Test_MultiGeneration.txt  RawDigits_Test_SingleGeneration.txt  RawDigits_Threshold.txt  Run-999999.txt
test/truncator/: CMakeLists.txt  FullTrunc.txt  MultiWires.txt  NoTrunc.txt  OnlyFront.txt  TruncTest_module.cc  TruncatorTest_DropFrontAndBack.fcl  TruncatorTest_DropInFront.fcl  TruncatorTest_DropMultiWire.fcl  TruncatorTest_NoTruncation.fcl
ups/: product_deps  product_deps.bak
